feat: Add bidirectional support for IPYNB and ODT formats
This commit introduces full bidirectional conversion support for Jupyter Notebook (.ipynb)
and OpenDocument Text (.odt) formats.

- Updated  to include 'ipynb' and 'odt' in supported formats
  enums and the tool description.
- Modified  to expand the test matrix and create fixtures
  for .ipynb and .odt, ensuring comprehensive testing and backward compatibility.
- Updated  and  to reflect the new formats in conversion
  matrices, format categories, and examples.
- Bumped project version to 0.4.0 in .

--- a/tests/output/test.tex
+++ b/tests/output/test.tex
@@ -1,3 +1,1 @@
-\phantomsection\label{ch001.xhtml}{}
-
-\section{Test}\label{ch001.xhtml_test}
+\section[Test]{\texorpdfstring{\protect\hypertarget{anchor}{}{}Test}{Test}}\label{test}
